--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # Logs
-logs
+
+/logs
 *.log
 npm-debug.log*
 yarn-debug.log*
@@ -12,7 +13,7 @@ pids
 *.pid.lock
 
 # Dependency directories
-node_modules/
+/node_modules/
 jspm_packages/
 
 # Environment variables
